--- a/layouts/index.html
+++ b/layouts/index.html
@@ -43,50 +43,44 @@
       </section>
       </section>
       <section id="landlords" class="landlords">
-        <header>
+        <!-- <header>
           <h2>
             <a href="#landlords">Landlords</a>
           </h2>
-        </header>
-        <div class="wrapper">
-          <h2>Landlords, everything you need in one place.</h2>
-          <ul class="features">
-            <li>
-              <div class="icon icon-house"></div>
-              List properties
-            </li>
-            <li>
-              <div class="icon icon-search"></div>
-              Find tenants
-            </li>
-            <li>
-              <div class="icon icon-clock"></div>
-              Manage viewings
-            </li>
-            <li>
-              <div class="icon icon-document"></div>
-              Neogtiate offers
-            </li>
-            <li>
-              <div class="icon icon-sign"></div>
-              Sign and manage contracts
-            </li>
-            <li>
-              <div class="icon icon-boxes"></div>
-              Create inventories
-            </li>
-            <li>
-              <div class="icon icon-keys"></div>
-              Organize move-ins and outs
-            </li>
-          </ul>
+        </header> -->
+        <div class="wrapper wrapper-flex">
+          <div class="push-right">
+            <h2>Landlords, everything you need in one place.</h2>
+            <ul class="features">
+              <li>
+                <div class="icon icon-house"></div>
+                List properties
+              </li>
+              <li>
+                <div class="icon icon-search"></div>
+                Find tenants
+              </li>
+              <li>
+                <div class="icon icon-clock"></div>
+                Manage viewings
+              </li>
+              <li>
+                <div class="icon icon-sign"></div>
+                Manage contracts
+              </li>
+              <li>
+                <div class="icon icon-keys"></div>
+                Organize move-ins and outs
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
       <section id="tenants" class="tenants">
-        <header>
+        <!-- <header>
           <h2>
             <a href="#tenants">Tenants</a>
-          </h2>
+          </h2> -->
         </header>
         <div class="wrapper">
           <h2>Tenants, find the perfect place to live without the headahes and fees.</h2>
