--- a/layouts/index.html
+++ b/layouts/index.html
@@ -73,6 +73,7 @@
                 Organize move-ins and outs
               </li>
             </ul>
+            <p><a href="#get-access" class="pill pill-large pill-red">Get Early Access</a></p>
           </div>
         </div>
       </section>
@@ -106,11 +107,12 @@
               Move in
             </li>
           </ul>
+          <p><a href="#get-access" class="pill pill-large pill-red">Get Early Access</a></p>
         </div>
       </section>
       <section id="professionals" class="professionals">
         <div class="wrapper">
-          <h3>Are you a property professional?</h3>
+          <h3>Are you a lettings negotiator?</h3>
           <ul class="features">
             <li>
               <div class="icon icon-coin"></div>
@@ -125,9 +127,10 @@
               Have complete career freedom
             </li>
           </ul>
+          <p><a href="#get-access" class="pill pill-large pill-red">Get Early Access</a></p>
         </div>
       </section>
-      <section id="professionals" class="professionals">
+      <!-- <section id="team" class="team">
         <div class="wrapper">
           <h3>The Team</h3>
           <div class="team-list">
@@ -157,8 +160,15 @@
             </figure>
           </div>
         </div>
+      </section> -->
+      <section class="copyright">
+        &copy; Smoor
+        <ul class="sosh">
+          <li><a href="https://twitter.com/smoorapp" class="sosh-twitter">SmoorApp on Twitter</a></li>
+          <li><a href="https://www.instagram.com/smoorapp/" class="sosh-instagram">SmoorApp on Instagram</a></li>
+          <li><a href="https://www.facebook.com/SmoorApp/" class="sosh-facebook">SmoorApp on Facebook</a></li>
+        </ul>
       </section>
-      <section class="copyright">&copy; Smoor</section>
     </main>
     {{ partial "footer.html" . }}
     {{ partial "get-access.html" . }}
