Publishing to gh-pages (deploy.sh)

--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -77,13 +77,28 @@ section {
   padding-bottom: 64px;
   padding-right: 24px;
   padding-left: 24px;
+  border-top: $ui-separator-width solid $ui-separator-color;
 
   @include media("<tablet") {
     padding-top: 44px;
   }
 
+  @include media(">=tablet") {
+    .left,
+    .right {
+      width: 50%;
+    }
+
+    .push-right {
+      width: 50%;
+      margin-left: 50%;
+    }
+  }
 
   > .wrapper {
+
+    position: relative;
+    z-index: 1;
 
     @include media(">=tablet") {
       @include scut-center-block;
@@ -167,93 +182,9 @@ section {
   }
 }
 
-// Section Hero
-.hero {
-  z-index: 500;
-  box-sizing: border-box;
-  height: calc(100% - 72px);
-  max-height: 768px;
-  overflow: hidden;
-  position: relative;
-  background-color: #f7f9f8;
-  background-position: center bottom;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-image: url('/img/hero_couple_phone.jpg');
+// Doodles
 
-  @include media("<=phone") {
-    background-image: url('/img/hero_couple_phone.jpg');
-    background-size: 480px 453.5px;
-    height: calc(100% - 88px);
-  }
-
-  @include media(">phone") {
-    background-image: url('/img/hero_couple_desktop.jpg');
-    height: calc(100% - 72px);
-  }
-
-  @include media(">=tablet") {
-    background-image: url('/img/hero_couple_tablet.jpg');
-    background-size: 1024px 680px;
-    max-height: calc(100% - 96px);
-  }
-
-  @include media(">=desktop") {
-    background-image: url('/img/hero_couple_desktop.jpg');
-    background-size: 1440px 604.5px;
-  }
-
-  @include media(">=desktop", "portrait") {
-    max-height: 768px;
-  }
-
-  @include media(">=hd") {
-    background-size: contain;
-    max-height: calc(100% - 96px);
-  }
-
-  h1 {
-    @include type-displayl;
-
-    text-align: center;
-    margin-top: 48px;
-    color: $red;
-    position: relative;;
-    z-index: 1;
-
-    @include media("<=phone") {
-      margin-top: 40px;
-    }
-
-    @include media(">phone", "<=tablet") {
-      margin-top: 24px;
-    }
-
-    @include media(">=tablet") {
-      margin-top: 192px;
-    }
-
-    @include media(">=tablet", "landscape") {
-      margin-top: 80px;
-    }
-
-    @include media(">=desktop") {
-      @include type-displaylll;
-    }
-
-    @include media(">=hd") {
-      margin-top: 112px;
-    }
-  }
-
-  .discover {
-    @include scut-center-block;
-    background: url($svg-icon-scrolldown) center;
-    width: 22px;
-    height: 22px;
-  }
-
-  .doodle {
+.doodle {
     position: absolute;
     background-repeat: no-repeat;
     z-index: 0;
@@ -410,6 +341,89 @@ section {
     }
   }
 
+// Section Hero
+.hero {
+  z-index: 500;
+  box-sizing: border-box;
+  height: calc(100% - 72px);
+  max-height: 768px;
+  min-height: 640px;
+  overflow: hidden;
+  position: relative;
+  border-top: 0;
+  background-color: #f7f9f8;
+  background-position: center bottom;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-image: url('/img/hero_couple_phone.jpg');
+
+  @include media(">phone", "landscape") {
+    background-image: url('/img/hero_couple_desktop.jpg');
+    height: calc(100% - 72px);
+    min-height: auto;
+  }
+
+  @include media(">=tablet") {
+    background-image: url('/img/hero_couple_tablet.jpg');
+    background-size: 1024px 680px;
+    max-height: calc(100% - 96px);
+  }
+
+  @include media(">=desktop") {
+    background-image: url('/img/hero_couple_desktop.jpg');
+    background-size: 1440px 604.5px;
+  }
+
+  @include media(">=desktop", "portrait") {
+    max-height: 768px;
+  }
+
+  @include media(">=hd") {
+    background-size: contain;
+    max-height: calc(100% - 96px);
+  }
+
+  h1 {
+    @include type-displayl;
+
+    text-align: center;
+    margin-top: 48px;
+    color: $red;
+    position: relative;;
+    z-index: 1;
+
+    @include media("<=phone") {
+      margin-top: 40px;
+    }
+
+    @include media(">phone", "<=tablet") {
+      margin-top: 24px;
+    }
+
+    @include media(">=tablet") {
+      margin-top: 192px;
+    }
+
+    @include media(">=tablet", "landscape") {
+      margin-top: 80px;
+    }
+
+    @include media(">=desktop") {
+      @include type-displaylll;
+    }
+
+    @include media(">=hd") {
+      margin-top: 112px;
+    }
+  }
+
+  .discover {
+    @include scut-center-block;
+    background: url($svg-icon-scrolldown) center;
+    width: 22px;
+    height: 22px;
+  }
+
   .pill {
     @include scut-center-transform(x);
     margin-top: 24px;
@@ -422,15 +436,12 @@ section {
 
 // Section summary
 .summary {
-  border-top: $ui-separator-width solid $ui-separator-color;
-  padding-bottom: 112px;
+  padding-bottom: 64px;
   overflow: hidden;
+  border-top: 0;
 
-  @include media(">=tablet") {
-    .left,
-    .right {
-      width: 50%;
-    }
+  @include media(">tablet") {
+    padding-bottom: 112px;
   }
 }
 
@@ -488,7 +499,34 @@ section {
 // Section Landlords
 .landlords {
   z-index: 600;
-  padding-top: .1px;
+  position: relative;
+  padding-bottom: 400px;
+  background-image: url('/img/hero_landlord_phone.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center bottom;
+  overflow: hidden;
+
+  @include media(">phone", "landscape") {
+    padding-bottom: 420px;
+    background-image: url('/img/hero_landlord_tablet.png');
+  }
+
+  @include media(">=tablet") {
+    background-image: url('/img/hero_landlord_tablet.png');
+    padding-bottom: 0;
+    min-height: 640px;
+    box-sizing: border-box;
+    background-size: contain;
+  }
+
+  @include media(">=tablet", "portrait") {
+    background-position: 0 bottom;
+  }
+
+  @include media(">=desktop") {
+    background-image: url('/img/hero_landlord_desktop.png');
+  }
 
   > header {
     transform: translateY(-48px);
@@ -502,17 +540,69 @@ section {
 // Section Tenants
 .tenants {
   z-index: 700;
-  border-bottom: $ui-separator-width solid $ui-separator-color;
+  padding-bottom: 400px;
+  background-image: url('/img/hero_tenant_phone.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center bottom;
+  overflow: hidden;
+
+  @include media(">phone", "landscape") {
+    padding-bottom: 240px;
+    background-image: url('/img/hero_tenant_tablet.png');
+  }
+
+  @include media(">=tablet") {
+    background-image: url('/img/hero_tenant_tablet.png');
+    padding-bottom: 192px;
+    min-height: 640px;
+    box-sizing: border-box;
+    background-size: contain;
+  }
+
+  @include media(">=tablet", "portrait") {
+    background-position: 0 bottom;
+  }
+
+  @include media(">=desktop") {
+    background-image: url('/img/hero_tenant_desktop.png');
+  }
 }
 
 // Section Professionals
 .professionals {
   z-index: 800;
-  padding-top: 16px;
-  border-bottom: $ui-separator-width solid $ui-separator-color;
+  padding-bottom: 256px;
+  background-image: url('/img/hero_negotiator_phone.jpg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: right bottom;
+  overflow: hidden;
 
-  h3 {
-    text-align: center;
+  @include media(">phone", "landscape") {
+    background-image: url('/img/hero_negotiator_tablet.jpg');
+    padding-bottom: 320px;
+  }
+
+  @include media(">=tablet") {
+    background-image: url('/img/hero_negotiator_tablet.jpg');
+    min-height: 640px;
+    box-sizing: border-box;
+    background-size: 864px 420px;
+    padding-bottom: 240px;
+  }
+
+  @include media(">=tablet", "portrait") {
+    padding-bottom: 384px;
+  }
+
+  @include media(">=desktop") {
+    background-image: url('/img/hero_negotiator_desktop.jpg');
+    background-size: 864px 420px;
+
+    .features li {
+      width: 128px;
+    }
   }
 }
 
@@ -521,41 +611,31 @@ section {
 .features {
   @include scut-list-unstyled;
 
-  border: $ui-separator-width solid $ui-separator-color;
-  border-radius: 8px;
   margin-top: 32px;
   margin-bottom: 32px;
 
-  @include media(">=tablet") {
-    border: 0;
-    border-radius: 0;
+  @include media(">phone", "landscape") {
     display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
   }
 
   li {
     position: relative;
-    border-bottom: $ui-separator-width solid $ui-separator-color;
-    padding: 12px 16px 12px 64px;
+    margin-bottom: 8px;
+    padding-left: 72px;
+    padding-right: 0;
+    padding-top: 0;
+    padding-right: 0;
+    width: auto;
+    height: 56px;
+    display: flex;
+    align-items: center;
 
-    @include media("<tablet") {
-      &:last-child {
-        border: 0;
-      }
-    }
-
-    @include media(">=tablet") {
-      box-sizing: border-box;
-      border-radius: 8px;
-      border: $ui-separator-width solid $ui-separator-color;
-      display: flex;
-      align-items: center;
-      width: 344px;
-      height: 96px;
-      margin: 8px;
-      padding: 0 40px 0 96px;
+    @include media(">phone", "landscape") {
+      width: 96px;
+      height: auto;
+      padding-left: 0;
+      padding-right: 16px;
+      padding-top: 56px;
     }
   }
 }
@@ -564,14 +644,15 @@ section {
   position: absolute;
   top: 0;
   left: 0;
-  height: 48px;
-  width: 48px;
+  height: 56px;
+  width: 56px;
   background-position: center;
   background-repeat: no-repeat;
+  background-size: 44px 44px;
 
   @include media(">=tablet") {
-    height: 96px;
-    width: 96px;
+    height: 56px;
+    width: 56px;
   }
 
   &.icon-boxes {
@@ -770,4 +851,40 @@ section {
   @include type-subhead;
 
   text-align: center;
+}
+
+.sosh {
+  text-align: center;
+  padding: 0;
+  margin-top: 48px;
+  margin-bottom: 48px;
+
+  li {
+    @include scut-list-unstyled;
+
+    display: inline-block;
+    margin-left: 12px;
+    margin-right: 12px;
+  }
+
+  a {
+    @include scut-image-replace;
+
+    display: block;
+    width: 24px;
+    height: 24px;
+    background-size: contain;
+  }
+
+  .sosh-facebook {
+    background-image: url($svg-sosh-facebook);
+  }
+
+  .sosh-instagram {
+    background-image: url($svg-sosh-instagram);
+  }
+
+  .sosh-twitter {
+    background-image: url($svg-sosh-twitter);
+  }
 }
