typo fix and image change

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -84,7 +84,7 @@
           </h2> -->
         </header>
         <div class="wrapper">
-          <h2>Tenants, find the perfect place to live without the headahes and fees.</h2>
+          <h2>Tenants, find the perfect place to live without the headaches and fees.</h2>
           <ul class="features">
             <li>
               <div class="icon icon-house"></div>
@@ -96,7 +96,7 @@
             </li>
             <li>
               <div class="icon icon-document"></div>
-              Neogtiate offers
+              Negotiate offers
             </li>
             <li>
               <div class="icon icon-sign"></div>
